2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/io.h: Include portpins.h.
	* include/avr/portpins.h: New file.
	* include/avr/ioat94k.h: Convert PORTxn to Pxn.
	* include/avr/iom128.h: Convert PORTxn to Pxn.
	* include/avr/iom162.h: Convert PORTxn to Pxn.
	* include/avr/iom64.h: Convert PORTxn to Pxn.
	* include/avr/iotn15.h: Convert PORTxn to Pxn.

2003-10-18  Theodore A. Roth  <troth@openavr.org>
[Fix for Bug #5976]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Use pgm_read_byte() instead of __lpm_inline() in the
	debug_P() example.
	* include/stdlib.h (itoa): Add note and warning about minimal buffer
	size to dox.
	(ltoa): Ditto.
	(utoa): Ditto.
	(ultoa): Ditto.

2003-10-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom162.h: Change PE[01] to UPE[01]. [Bug #5799]

2003-10-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about new vfprintf_P and vfscanf_P functions.
	* include/stdio.h: Add prototypes and dox for vfprintf_P and vfscanf_P.
	* libc/stdio/Makefile.am (lib_a_c_sources): Add vfprintf_p.c and
	vfscanf_p.c.
	* libc/stdio/vfprintf_p.c: New file.
	* libc/stdio/vfscanf_p.c: New file.

2003-10-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* README: Change current branch version to 1.1.
	* libc/string/strcat.S: Don't use backtick to quote a C char.
	* libc/string/strcpy.S: Don't use backtick to quote a C char.
	* libc/string/strlen.S: Don't use backtick to quote a C char.
	* libc/string/strtok_r.S: Don't use backtick to quote a C char.

	[Submitted by Steven Borley <steven.borley@diode.demon.co.uk>]
	* libc/string/strsep.S: Don't use backtick to quote a C char.
	Add \fn for function definition dox.
	Exscape '\' char.
	* libc/string/strstr.S: Don't use backtick to quote a C char.